# pavumeterc

./: configure.ac
src/: Makefile.am  vumeter.cc
